styles/styles.css
:root {
    --mobile-nav-width: min(55vw, 250px);
    --btn-1-color: #fc851e;
    --btn-2-color: #fc851e;
    --gray-font-color: #666666;
}

/* FONT FAMILY FOR ALL TEXT */

* {
    font-family: 'Source Sans 3', 'Times New Roman', Times, serif;
}

body {
    background-color: #aaa;
}

@media screen and (max-width: 63.063em) {
    .overflow-body--hidden {
        overflow: hidden;
    }
}

.page-wrapper {
    height: 100dvh;
}

main {
    max-width: 75em;
    margin: 0 auto;
}

/*  
======================================
            	HEADER               
======================================
*/

.header-wrapper {
    max-width: 100%;
    background-color: black;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: 75em;
    position: sticky;
    top: 0;
    padding: 12px;
    margin: 0 auto;
    z-index: 10;

    & .audioengine-logo {
        width: min(47vw, 222px);
    }
}

@media screen and (min-width: 63.125em) {
    header {
        padding: 13px 20px;
    }
}

/*  
======================================
           DESKTOP NAV MENUS         
======================================
*/

/* STYLES FOR DESKTOP NAV */

.desktop-nav-menu {
    display: none;
    margin-left: auto;
    padding: 0 48px;
}

@media screen and (min-width: 63.125em) {
    .desktop-nav-menu {
        display: block;
    }
}

.desktop-nav-menu ul {
    display: flex;
    gap: 2.8rem;
    list-style-type: none;

    & a {
        color: white;
        text-decoration: none;
        text-transform: uppercase;
        font-size: 1.2rem;
    }
}

/*  
======================================
           MOBILE NAV MENUS         
======================================
*/

/* STYLES FOR MOBILE NAV OVERLAY */

.mobile-nav-overlay {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    background-color: rgba(104, 104, 104, 0.8);
    width: 100%;
    height: 100vh;
}

.mobile-nav-overlay--display-block {
    display: block;
}

.close-x-icon {
    position: absolute;
    right: 24px;
    top: 24px;
    width: 2rem;
}

/* STYLES FOR MOBILE NAV */

.hamburger-menu {
    width: min(2.5rem, 9vw);
}

@media screen and (min-width: 63.125em) {
    .hamburger-menu {
        display: none;
    }
}

.mobile-nav-menu {
    position: absolute;
    top: 0;
    left: calc(-176px - var(--mobile-nav-width));
    width: var(--mobile-nav-width);
    height: 100vh;
    background-color: black;
    border: 2px solid white;
    z-index: 100;
    transition: left 0.3s ease-in-out;
}

.mobile-nav-menu--open {
    left: 0;
}

@media screen and (min-width: 63.125em) {
    .hamburger-menu,
    .mobile-nav-overlay,
    .mobile-nav-menu {
        display: none;
    }
}

/* STYLES FOR MOBILE NAV ul, li AND a TAGS */

.mobile-nav-menu ul {
    display: flex;
    flex-direction: column;
    list-style-type: none;
    height: 300px;

    & li {
        height: 100%;
        border-bottom: 2px solid white;
    }

    & a {
        display: flex;
        justify-content: center;
        align-items: center;
        height: 100%;
        color: white;
        text-decoration: none;
        text-transform: uppercase;
    }
}

/*  
======================================
            HEADER ICONS         
======================================
*/

.icons-container {
    display: flex;
    align-items: center;
    gap: min(1.5rem, 3.5vw);
    list-style-type: none;

    & li img {
        width: min(1.5rem, 5vw);
    }

    & li:last-child img {
        width: min(1.8rem, 6vw);
    }
}

@media screen and (min-width: 63.125em) {
    .icons-container {
        gap: 0.8em;

        & li img {
            width: 1.05rem;
        }

        & li:last-child img {
            width: 1.41rem;
        }
    }
}

/*  
======================================
             MAIN SECTIONS         
======================================
*/

/*  
======================================
             HERO SECTION         
======================================
*/

/* STYLES AUDIO ENGINE HERO IMAGE */

.audioengine-hero {
    position: relative;
    padding-bottom: 100%;
}

.audioengine-hero::before {
    content: '';
    background-image: url('../images/banner/banner-01-speaker-black-square.jpg');
    background-repeat: no-repeat;
    background-position: center center;
    background-size: contain;
    position: absolute;
    inset: 0;
    z-index: -1;
}

@media screen and (min-width: 48em) {
    .audioengine-hero {
        padding-bottom: 52%;
    }

    .audioengine-hero::before {
        background-image: url('../images/banner/banner-01-speaker-black.jpg');
        background-size: cover;
    }
}

/* STYLES FOR AUDIO ENGINE HERO IMAGE CARD */

.audioengine-hero-card::before {
    content: '';
    background-color: white;
    background-repeat: no-repeat;
    background-size: contain;
    opacity: 0.7;
    position: absolute;
    inset: 0;
    z-index: -1;
}

.audioengine-hero-card {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: absolute;

    > *:not(:first-child) {
        margin-bottom: min(2.4vw, 1.7rem);
    }

    & h1 {
        font-size: min(8.5vw, 3.7rem);
    }

    & h1,
    p {
        color: var(--gray-font-color);
    }

    & h1,
    a {
        text-transform: uppercase;
    }

    & p {
        font-weight: 300;
        font-size: min(7.5vw, 3.1rem);
        text-wrap: wrap;
    }

    & a {
        text-decoration: none;
        color: #ffffffe6;
        background-color: var(--btn-1-color);
        padding: min(3vw, 12px) min(4vw, 20px);
        font-size: min(3.5vw, 1.1rem);
        border: none;
        border-radius: 4px;
    }
}

/* STYLES FOR MOBILE AUDIO ENGINE HERO CARD */

@media screen and (max-width: 48em) {
    .audioengine-hero-card::before {
        border-radius: 5px;
    }

    .audioengine-hero-card {
        justify-content: space-evenly;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);

        & h1,
        p {
            text-align: center;
        }
    }
}

/* STYLES FOR DESKTOP AUDIO ENGINE HERO CARD */

@media screen and (min-width: 48em) {
    .audioengine-hero-card {
        align-items: flex-start;
        gap: 0.5rem;
        right: 0;
        top: min(2.7vw, 2rem);
        padding-top: 16px;
        padding-left: 32px;
        width: 37.5rem;
        height: 19.5rem;

        & a {
            align-self: flex-start;
            padding: min(2vw, 12px) min(3vw, 20px);
            font-size: min(2.5vw, 1.1rem);
        }
    }
}

/*  
======================================
        SHOP SPEAKERS SECTION         
======================================
*/

/* STYLES FOR SHOP AND POPULAR SPEAKERS */

.shop-speakers {
    background-color: white;
}

.shop-speakers h2,
.shop-speakers h3,
.shop-speakers a {
    text-transform: uppercase;
}

.popular-speakers h2 {
    text-align: center;
    font-size: 2.5rem;
    font-weight: 300;
    padding: 60px 0 80px;
}

/* STYLES FOR CURRENT POPULAR SPEAKERS */

.current-popular-speakers {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 5.5rem;
    list-style-type: none;

    & li {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    & li img {
        width: 15rem;
    }

    & li h3 {
        text-align: center;
        font-weight: 300;
        margin-bottom: 2.5rem;
        font-size: 1.3rem;
        text-wrap: auto;
        width: 17rem;
    }

    & li a {
        text-decoration: none;
        color: #ffffffe6;
        background-color: var(--btn-1-color);
        border: none;
        border-radius: 4px;
        padding: 14px 26px;
        margin-top: auto;
        font-size: 1.3rem;
    }
}

/* STYLES FOR SHOP BY ROOM OR DEVICE */

.shop-by-room-or-device h2,
.shop-by-room-or-device h3 {
    text-transform: uppercase;
}

.shop-by-room-or-device h2 {
    text-align: center;
    font-size: 2.4rem;
    font-weight: 300;
    padding: 84px 0 60px;
}

.room-or-device {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 2.5rem;
    list-style-type: none;

    & li {
        border-radius: 50%;
    }
}

.bubble-shop-container {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    border-radius: 50%;

    & img,
    h3 {
        border-radius: 50%;
    }

    & img {
        width: 10rem;
    }

    & h3 {
        display: flex;
        justify-content: center;
        align-items: center;
        position: absolute;
        color: white;
        font-size: 1.8rem;
        font-weight: 400;
        text-align: center;
        text-wrap: auto;
        z-index: 10;
        width: 100%;
        height: 100%;
        background-color: rgba(36, 36, 36, 0.6);
    }
}

